# simplx

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  common_simplx.cmake
doc/: Doxyfile  index.dox
include/: simplx.h
include/connector/: httpconnector.hpp  tcpconnector.hpp
include/pattern/: enterprise.h  fast_registercallback.h  keyboardactor.h  registry.h  timer.h
include/pattern/bus/: channel.hpp  data.hpp  ringbuffer.hpp  xthreadbus.hpp
include/pattern/timer/: timeractor.h  timerevent.h  timerproxy.h
include/simplx_core/: actor.h  engine.h  engineversion.h  event.h  initializer.h  platform.h
include/simplx_core/internal/: cacheline.h  datastream.h  dlldecoration.h  dlldecorationrestore.h  (+18 more)
src/pattern/: keyboardactor.cpp  waitcondition.cpp
src/simplx_core/: CMakeLists.txt  actor.cpp  e2e_stub.cpp  engine.cpp  node.cpp  refmapper.cpp
test/: docker_test.sh
test/engine/: CMakeLists.txt  maintest.cpp  testmodule.h  testtime.cpp  testtimeractor.cpp  testutil.h
test/simplx_core/: testasync.cpp  testasyncactor.cpp  testasyncengine.cpp  testasynceventloop.cpp  testasyncinitializer.cpp  testdataiostream.cpp  testmdoublechain.cpp  testmforwardchain.cpp  testparallel.cpp  testproperty.cpp
tutorial/01_hello_actor/: CMakeLists.txt  README.md  hello_actor.cpp
tutorial/02_hello_world/: CMakeLists.txt  hello_world.cpp
tutorial/03_printer_actor_starter/: CMakeLists.txt  printer_actor_starter.cpp
tutorial/04_printer_actor_service/: CMakeLists.txt  printer_actor_service.cpp
tutorial/05_multi_callback/: CMakeLists.txt  multi_callback.cpp
tutorial/06_undelivered_event_management/: CMakeLists.txt  undelivered_event_management.cpp
tutorial/07_referenced_unreferenced_actor/: CMakeLists.txt  ref_unref_actor.cpp
tutorial/08_pingpong/: CMakeLists.txt  pingpong.cpp
tutorial/09_sync_exit/: CMakeLists.txt  sync_exit.cpp
tutorial/10_timer/: CMakeLists.txt  README.md  timer.cpp
tutorial/11_keyboard_actor/: CMakeLists.txt  keyboard.cpp
tutorial/12_connector/: README.md
tutorial/12_connector/http/sample/: CMakeLists.txt  httpserver.cpp
tutorial/12_connector/tcp/sample/: CMakeLists.txt  tcpclient.cpp  tcpserver.cpp
tutorial/13_cross_thread_bus/: Makefile  main.v1.cpp  main.v2.cpp  main.v3.cpp
tutorial/14_fast_registercallback/: Makefile  fastregistercallback  main.cpp
tutorial/quickstart/: Makefile  main.cpp
(+38 files in other folders)
